tests/sawn/fixtures/invalid/05_table_no_columns_with_children.sawn
// INVALID: Table [][] with no columns but has children
data[][]
  1
  2
